[package]
name = "sodalite"
version = "0.4.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
description = "Tweetnacl in pure rust with no std dependency"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/jmesmon/sodalite"
repository = "https://github.com/jmesmon/sodalite.git"
documentation = "https://docs.rs/crate/sodalite/"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
edition = "2018"

keywords = [ "sodium", "cryptography", "nacl", "no_std"]
categories = [ "cryptography" ]

[[bench]]
name = "basic"
harness = false

[badges]
travis-ci = { repository = "jmesmon/sodalite" }
appveyor = { repository = "jmesmon/sodalite" }

[features]
docs = ["rand"]

[dependencies]
rand = { version = "0.7", optional = true }
index-fixed = "0.3"

[dev-dependencies]
tweetnacl = { path = "tweetnacl", version = "0.4" }
rand = "0.7"
hex = "0.4"
criterion = "0.3"
rand_pcg = "0.3"

[workspace]
