[package]
name = "tweetnacl-sys"
version = "0.1.1"
authors = ["Cody P Schafer <dev@codyps.com>"]
build = "build.rs"
repository = "https://github.com/jmesmon/sodalite.git"
description = "tweetnacl & FFI bindings to it"
keywords = [ "nacl", "crypto", "ffi"]
license = "MIT OR Apache-2.0"
include = [ "Cargo.toml", "src/*.rs", "src/*.c", "build.rs" ]

[dependencies]
libc = "0.*"

[build-dependencies]
gcc = "0.*"
