[package]
name = "tweetnacl"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
repository = "https://github.com/jmesmon/sodalite.git"
description = "A rust api for using tweetnacl"
keywords = [ "nacl", "crypto" ]
license = "MIT OR Apache-2.0"

[dependencies]
tweetnacl-sys = { path = "../tweetnacl-sys", version = "0.*" }

[dev-dependencies]
rand = "0.*"
