[package]
name = "tweetnacl"
version = "0.4.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
repository = "https://github.com/jmesmon/sodalite.git"
documentation = "https://docs.rs/tweetnacl"
description = "A rust api for using tweetnacl"
license = "MIT OR Apache-2.0"
include = [ "Cargo.toml", "src/*.rs" ]
workspace = ".."
keywords = [ "nacl", "cryptography", "no_std" ]
categories = [ "cryptography" ]
edition = "2018"

[badges]
travis-ci = { repository = "jmesmon/sodalite" }
appveyor = { repository = "jmesmon/sodalite" }

[dependencies]
tweetnacl-sys = { path = "../tweetnacl-sys", version = "0.*" }

[dev-dependencies]
rand = "0.7"
